# ledit

./: CMakeLists.txt  Makefile  README.md  main.c  resources
include/utils/: util.c  util.h
